# KatanA

./: .clippy.toml  .gitignore  .markdownlint.json  0001-feat-Markdown-content-search.patch  CHANGELOG.ja.md  CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.ja.md  README.md  artifacts_contrast.txt  biome.jsonc  cliff.toml  evaluate_contrast.py  fix_locales.js  fix_names.js  kal.json  lefthook.yml  patch_ui.sh  self-review-task1.md  split_settings.py  startup_log.txt  test_out.txt  update_ast_linter.py
crates/katana-core/: Cargo.toml  build.rs
crates/katana-core/examples/: export_markdown_html.rs  render_drawio_fixtures.rs  render_mermaid_fixtures.rs
crates/katana-core/examples/render_mermaid_fixtures/: skipped_report.rs  source_markdown.rs
crates/katana-core/src/: bin_test.rs  document.rs  emoji.rs  lib.rs  search.rs  update.rs  workspace.rs
crates/katana-core/src/ai/: mod.rs  ollama.rs  registry.rs  types.rs
crates/katana-core/src/editor/: mod.rs
crates/katana-core/src/emoji/: data.rs  mod.rs  raster.rs  svg.rs  types.rs
crates/katana-core/src/html/: parser.rs
crates/katana-core/src/markdown/: color_preset.rs  diagram.rs  diagram_js_runtime.rs  diagram_runtime.rs  diagram_runtime_assets.rs  drawio_renderer.rs  export.rs  fence.rs  kdv_theme_adapter.rs  mermaid_renderer.rs  mod.rs  outline.rs  plantuml_renderer.rs  render.rs  svg_rasterize.rs  test_comrak.rs  types.rs
crates/katana-core/src/plugin/: mod.rs  types.rs
crates/katana-core/src/preview/: diagram_ast.rs  image.rs  mod.rs  tests.rs  types.rs
crates/katana-core/src/search/: mod.rs  tests.rs  types.rs
crates/katana-core/src/system/: mod.rs  process.rs  types.rs
crates/katana-core/src/update/: cleanup.rs  download.rs  error.rs  installer.rs  mod.rs  proxy_env_test.rs  release_client.rs  scripts.rs  tests.rs  types.rs  version.rs
crates/katana-core/src/workspace/: mod.rs  tests.rs  types.rs
crates/katana-core/tests/: ai.rs  document.rs  export_regression.rs  markdown.rs  markdown_diagram.rs  markdown_drawio.rs  markdown_drawio_official.rs  markdown_drawio_theme.rs  markdown_mermaid.rs  markdown_parsing.rs  markdown_plantuml.rs  markdown_render_diagram_html.rs  markdown_svg_rasterize.rs  markdown_tilde_fences.rs  markdown_underline.rs  mermaid_js_runtime_feedback.rs  mermaid_js_runtime_i18n.rs  mermaid_js_runtime_layout.rs  mermaid_js_runtime_spike.rs  native_export_visual.rs  plugin.rs  preview.rs  preview_regression.rs  preview_tilde_fences.rs  workspace.rs
crates/katana-core/tests/support/: drawio_fixtures.rs
crates/katana-linter/: Cargo.toml  ast_linter.rs
crates/katana-linter/src/: lib.rs  markdown.rs
crates/katana-linter/src/markdown/: mod.rs  types.rs
crates/katana-linter/src/rules/: mod.rs
crates/katana-linter/src/utils/: file_collector.rs  json.rs  parser.rs  reporter.rs  whitelist.rs
crates/katana-linter/tests/: ast_linter.rs  fix_harness.rs  fix_scenarios.rs  markdown_linter.rs
crates/katana-linter/tests/fixtures/: markdownlint-v0.40.0-schema.json
crates/katana-platform/: Cargo.toml  build.rs
crates/katana-platform/src/: config_path.rs  contract.rs  filesystem.rs  lib.rs  macos_appearance.m  os_fonts.rs  os_locale.rs  os_theme.rs  settings.rs  theme.rs
crates/katana-platform/src/cache/: default.rs  default_bench.rs  memory.rs  mod.rs  tests.rs  types.rs
crates/katana-platform/tests/: filesystem.rs  font_settings.rs  os_fonts.rs  settings.rs
crates/katana-ui/: Cargo.toml  Info.plist  build.rs  scratch_test.rs  test_html.md
crates/katana-ui/build_support/: process.rs
crates/katana-ui/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  ko.json  languages.json  pt.json  zh-CN.json  zh-TW.json
crates/katana-ui/resources/: guide_en.md  guide_ja.md  os_commands.json  welcome_en.md  welcome_ja.md
crates/katana-ui/src/: about_info.rs  app_action.rs  app_action_types.rs  app_state.rs  changelog.rs  diagram_controller.rs  editor_undo.rs  font_loader.rs  gui_setup.rs  html_preview_observer.rs  html_renderer.rs  http_cache_loader.rs  i18n.rs  icon.rs  language_options.rs  lib.rs  lint_fix_batch.rs  linter_bridge.rs  linter_config_bridge.rs  linter_config_bridge_tests.rs  linter_default_config.rs  linter_diagnostic_context.rs  linter_docs.rs  linter_options_bridge.rs  linter_options_bridge_tests.rs  locale_detection.rs  macos_menu.m  main.rs  markdown_authoring_op.rs  markdown_formatting_bridge.rs  markdown_formatting_bridge_tests.rs  native_menu.rs  os_command.rs  preview_pane.rs  preview_pane_ui.rs  settings_window.rs  shell.rs  shell_logic.rs  shell_tests.rs  shell_ui.rs  (+6 more)
crates/katana-ui/tests/: app_state.rs  diagram_rendering.rs  i18n.rs  integration.rs  integration_tests.rs  overlap_checker.rs  preview_pane.rs  sample_fixture_tests.rs  shell_logic.rs  splash_verification.rs  test_url.rs  theme.rs  theme_bridge.rs  ui_integration_fixture.rs  ui_integration_parallel.rs  ui_integration_serial.rs  underline_rendering.rs
crates/katana-ui/wix/: License.rtf  main.wxs
scripts/screenshot/: .gitignore  Cargo.toml  run.sh
scripts/screenshot/examples/: explorer-dnd-label.json  v0-22-10-mermaid-all-patterns.json  v0-22-14-light-diagrams.json  v0-22-15-zenuml-dark-verify.json  v0-22-15-zenuml-verify.json  v0-22-33-html-file-preview.json  v0-22-33-html-headless-preview.json  v0-22-34-html-headless-preview.json  v0-22-34-light-image-controls.json  v0-22-34-light-svg-controls.json  v0-22-35-html-headless-preview.json  v0-22-35-light-image-controls.json  v0-22-36-html-headless-preview.json  v0-22-36-light-image-controls.json  v0-22-7-feedback-regressions.json  v0-22-7-review.json  v0-22-8-fix-preview-all-detected-five-files.json  v0-22-8-fix-preview-all-detected.json  v0-22-8-fix-preview-file-bulk.json  v0-22-8-fix-preview-reopen-active.json  v0-22-8-fix-preview-reopen-after-apply.json  v0-22-8-fix-preview.json  v0-22-8-task2-ui-stabilization.json  v0-29-0-html-file-preview.json  workspace-main.json
scripts/screenshot/src/: capture.rs  executor.rs  executor_harness.rs  fixture.rs  http_fixture.rs  main.rs  request.rs
(+2202 files in other folders)
