[workspace]
members = [
    "crates/katana-core",
    "crates/katana-linter",
    "crates/katana-platform",
    "crates/katana-ui",
]
resolver = "2"

[workspace.package]
version = "0.17.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HiroyukiFuruno/KatanA"
rust-version = "1.80.0"

[workspace.dependencies]
# UI
eframe = { version = "0.34", features = ["default"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "file", "http", "svg", "svg_text"] }
egui_commonmark = { version = "0.23", default-features = false, features = ["better_syntax_highlighting", "load-images", "pulldown_cmark"] }
headless_chrome = "1"
egui_commonmark_backend = { path = "vendor/egui_commonmark_upstream/egui_commonmark_backend" }

# Markdown
comrak = { version = "0.52", default-features = false, features = ["shortcodes"] }

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking / Auto Update
ureq = { version = "3.3", features = ["json"] }
semver = "1.0"
zip = "8.5"

# Testing
tempfile = "3"
syn = { version = "2", features = ["full", "visit"] }
ignore = "0.4"

# Diagram rendering
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
xmltree = "0.12"

[patch.crates-io]
egui_commonmark = { path = "vendor/egui_commonmark_upstream/egui_commonmark" }
egui_commonmark_backend = { path = "vendor/egui_commonmark_upstream/egui_commonmark_backend" }
