[workspace]
members = [
    "crates/katana-core",
    "crates/katana-linter",
    "crates/katana-platform",
    "crates/katana-ui",
]
resolver = "2"

[workspace.package]
version = "0.22.19"
edition = "2024"
license = "MIT"
repository = "https://github.com/HiroyukiFuruno/KatanA"
rust-version = "1.95.0"
authors = ["Hiroyuki Furuno"]
description = "A context-aware AI desktop application."

[workspace.dependencies]
# UI
eframe = { version = "0.34", features = ["default"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image", "file", "http", "svg", "svg_text"] }
egui_commonmark = { version = "0.23", default-features = false, features = ["better_syntax_highlighting", "load-images", "pulldown_cmark"] }
egui_commonmark_backend = { path = "vendor/egui_commonmark_upstream/egui_commonmark_backend" }

# Markdown
comrak = { version = "0.52", default-features = false, features = ["shortcodes"] }
katana-canvas-forge = "0.1.7"
katana-diagram-renderer = "0.1.0"
katana-ast-lint = "0.5.1"
katana-markdown-linter = "0.19.1"

# Serialization / config
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking / Auto Update
ureq = { version = "3.3", features = ["json"] }
semver = "1.0"
zip = "8.6"
tar = "0.4.45"
flate2 = "1.1.9"

# Testing
tempfile = "3"
syn = { version = "2", features = ["full", "visit"] }
ignore = "0.4"

# Diagram rendering
resvg = "0.47"
usvg = "0.47"
tiny-skia = "0.12"
v8 = "=147.4.0"
mathjax_svg = "3.2.0"
xmltree = "0.12"
include_dir = "0.7.4"

[patch.crates-io]
egui_commonmark = { path = "vendor/egui_commonmark_upstream/egui_commonmark" }
egui_commonmark_backend = { path = "vendor/egui_commonmark_upstream/egui_commonmark_backend" }
egui-winit = { path = "vendor/egui-winit" }
mathjax_svg = { path = "vendor/mathjax_svg" }
