[package]
name = "katana-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KatanA core: document model, workspace model, markdown pipeline, AI orchestration, and plugin contracts"

[dependencies]
comrak.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
xmltree.workspace = true
tempfile.workspace = true
regex = "1.12.3"
headless_chrome.workspace = true
base64 = "0.22"
ureq.workspace = true
semver.workspace = true
zip.workspace = true
emojis = "0.8.0"
dirs = "6.0.0"

[dev-dependencies]
pulldown-cmark = "0.13.3"
tempfile.workspace = true
tracing-subscriber = "0.3"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }
