[package]
name = "katana-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KatanA core: document model, workspace model, markdown pipeline, AI orchestration, and plugin contracts"

[dependencies]
comrak.workspace = true
katana-document-viewer.workspace = true
katana-diagram-renderer.workspace = true
katana-markdown-model.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
resvg.workspace = true
usvg.workspace = true
tiny-skia.workspace = true
epaint_default_fonts.workspace = true
xmltree.workspace = true
tempfile.workspace = true
regex = "1.12.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
v8.workspace = true
include_dir.workspace = true
base64 = "0.22"
ureq.workspace = true
semver.workspace = true
zip.workspace = true
tar.workspace = true
flate2.workspace = true
emojis = "0.8.2"
syntect = { version = "5", default-features = false, features = ["default-themes", "default-syntaxes", "regex-fancy"] }
dirs = "6.0.0"
pulldown-cmark = "0.13.3"

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber = "0.3"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }
