[package]
name = "katana-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "KatanA platform: filesystem access, settings persistence, keybindings, clipboard, and OS integrations"

[dependencies]
katana-core = { path = "../katana-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rayon = "1.12.0"
dirs = "6.0.0"
tempfile.workspace = true
parking_lot = "0.12"
sys-locale = "0.3.2"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
dark-light = "2.0.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"

[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
cc = "1"
