[package]
name = "katana-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "KatanA UI: egui application shell, panes, menu wiring, and presentation state"

[dependencies]
katana-core = { path = "../katana-core" }
katana-platform = { path = "../katana-platform" }
katana-linter = { path = "../katana-linter" }
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
egui_commonmark.workspace = true
serde.workspace = true
anyhow.workspace = true
parking_lot = "0.12"
tracing.workspace = true
tracing-subscriber.workspace = true
rfd = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json.workspace = true
open = "5.3.4"
resvg = { version = "0.47.0", default-features = true }
ehttp = "0.7.1"
dirs = "6.0.0"
sha2 = "0.11"
regex = "1.12.3"
chrono = "0.4.44"
tempfile = "3"
pulldown-cmark = "0.13"
base64 = "0.22.1"
mathjax_svg = "3.2.0"
unicode-segmentation = "1.13.2"
arboard = "3.6.1"
uuid = { version = "1.23.1", features = ["v4"] }
egui-file-dialog = "0.13.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
winres = "0.1"

[[bin]]
name = "KatanA"
path = "src/main.rs"

[package.metadata.bundle]
name = "KatanA Desktop"
identifier = "com.github.hiroyukifuruno.katana"
icon = ["../../assets/icon.icns"]
copyright = "Copyright © 2026 Hiroyuki Furuno"
category = "public.app-category.developer-tools"
short_description = "A fast, lightweight Markdown workspace for macOS"

[dev-dependencies]
accesskit = "0.24.0"
egui_kittest = { version = "0.34", features = ["snapshot", "wgpu", "eframe"] }
time = "0.3"
