[workspace]

[package]
name = "katana-screenshot"
version = "0.1.0"
edition = "2021"
description = "Generic screenshot runner for KatanA — invoked by katana-astro or other website tooling"

[[bin]]
name = "katana-screenshot"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
